css/main.css
/* ... */
.faq-btn {
	padding: 0;
	width: 100%;
}

.question_block:hover {
	background-color: rgb(245, 245, 245);
	transition: background-color 0.2s ease-in-out;
}

.question {
	padding: 30px 4%;
	border-radius: 21px;
}

.ques_txt {
	font-weight: 100;
	text-align: left;
}

.question_block .up {
	display: none;
}

.answer {
	width: 100%;
	border-radius: 21px;
	max-height: 0;
	overflow: hidden;
	text-align: left;
	transition: all 0.25s cubic-bezier(0.215, 0.610, 0.355, 1);
}

.answer p {
	text-align: left;
	padding: 3% 4%;
}

.active .answer {
	max-height: 100vh;
	transition: all 0.25s cubic-bezier(0.47, 0, 0.745, 0.715);
}

.expand_box {
	text-align: left;
	margin-left: 6%;
	display: block;
	width: 88%;
	max-height: 0;
	overflow-y: clip;
	transition: max-height 0.25s cubic-bezier(0.215, 0.610, 0.355, 1);
}

.expand_box_core_content p {
	margin-top: 3%;
	text-align: left;
}

.active .expand_box {
	max-height: 100vh;
	transition: max-height 0.25s cubic-bezier(0.47, 0, 0.745, 0.715);
}

button.drop {
	padding-left: 0;
}

.drop {
	background-color: transparent;
	border: none;
	width: 100%;
}
.contributors {
	text-decoration: none;
	border: white;
	border-style: solid;
	padding: 7px;
	font-size: 13px;
	border-radius: 50%;
	width: 30px;
	height: 30px;
	margin: 2px;
	line-height: 42px;
}
button#contributors {
  border: none;
  background-color: transparent;
  text-decoration: underline;
  font-weight: 600;
  color: white;
}
input#club_search:focus {
	outline: rgb(95, 95, 95) solid 1px;
	background-color: #FFF;
}
#weekly_calendar {
  margin-top: 4%;
  padding: 0rem 0;
}
#people {
	display:  none;
}
.contributors:hover {
	color: black;
	border: black;
	border-style: solid;
}
#mariya{
  background-color: #4dc3a3
}
#nuha{
	background-color: #f0b852;
}
#charis{
	background-color: #c7c7fa;
}
#tristan{
	background-color: #678fea;
}
#chinglam{
	background-color: #f4b4bf;
}
#jiwon{
	background-color: #a3e6a3;
}
#brian{
	background-color: #fccea4;
}
#ali{
	background-color: #f06060;
}
.club_row {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.club_info {
	width: 50%;
	/* margin-top: 0;
	margin-left: 6%; */
	margin: 0 6% 0;
	text-align: left;
}

.seperate {
	width: 48%;
}

.seperate {
	display: block;
}

.club_header {
	display: flex;
	flex-direction: row;
	margin: 0 13%;
	justify-content: center;
	height: 150px;
}

.club_box {
	padding: 2.5% 1%;
	margin-top: 25px;
	margin-right: 2%;
	height: 100%;
	border: 1px solid rgb(182, 182, 182);
	border-radius: 5px;
	max-width: 50%;
}

.expand_box_core_content {
    max-height: 250px;
    overflow-y: scroll;
}

.inline_header {
	display: inline;
}

.club_box .up {
	display: none;
	margin-left: 6%;
	margin-top: 1%;
}

.no_bold {
	font-weight: normal;
}

.active .up {
	display: block;
}
#history_popup {
	display: none;
}
h4.t_history {
  font-size: 25px;
  font-weight: 100;
}
#team_popup {
	display:  none;
}
.club_box .down {
	display: block;
}
.a_row {
	display: flex;
}
h3.sport_info_title {
  margin-top: 3%;
}
img.t_pictures3 {
    width: 27%;
}
img.t_pictures2 {
    width: 20%;
}
img.t_pictures4 {
    width: 42%;
    margin-bottom: 1%;
}
h5.team_details_text {
  font-weight: 100;
}
.a_row_2 {
	display: flex;
}
h6.t_members {
	padding-top: 2%;
	text-align: center;
}
.t_pictures {
    width: 100%;
}

div.team_members {
	display: grid;
    grid-template-columns: repeat(auto-fill, 300px);
}

div.team_member {
	width: auto;
	padding: 2.5% 5%;
	align-items: center;
}

.team_history_section {
  color: white;
  background-color: #ac191a;
  width: 67%;
  padding: 3%;
  position: fixed;
  top: 24%;
  left: 15%;
}
button.close_bt {
  position: absolute;
  top: 7%;
  left: 96%;
  color: black;
  font-size: 21px;
  border: none;
  background: transparent;
}
.active .down {
	display: none;
	display:  fixed;
}

svg.svg-inline--fa.fa-chevron-down.fa-w-14 {
	margin-left: 6%;
}

.club-links {
	margin-top: 30px;
}
.center_elements{
	justify-content: center;
}
button.web_link {
	white-space: nowrap;
	border: none;
	background-color: #ac191a;
	color: white;
	padding: 0.25em 0.5em;
	margin-right: 2%;
}
button.page_link {
	white-space: nowrap;
    border: none;
    background-color: #ac191a;
    color: white;
    padding: 0.25em 0.5em;
	margin-right: 2%;
}
a.web_link , a.page_link {
	margin-top: 2%;
	margin-left: auto;
}
button.web_link_2{
	white-space: nowrap;
	border: none;
	background-color: #ac191a;
	color: white;
	padding: 2% 4%;
	margin-top: 2%;
	margin-right: 1%;
	margin-left:  12%;
}
#wcssaa-button {
  background-color: #0a1241;
    color: white;
    padding: 1%;
    border-radius: 33px;
    padding-right: 3%;
    padding-left: 3%;
    margin-bottom: 2%; 
}
.circles {
    margin-right: -12%;
}

.event-popup {
  position: fixed;
  bottom: 40px;
  left: 10%;
  right: 10%;
  width: 80%;
  height: 56px;
  border: none;
  border-radius: 12px;
  padding: 5% 4%;
  display: none;
  align-items: center;
  color: white;
  background-color: #0a1241;
  z-index: 2;
}

.event-popup-icon {
  width: 40px;
  height: 40px;
  position: absolute;
  left: 8px;
}

.event-popup-text {
  position: absolute;
  left: 56px;
  top: 0px;
}

.event-popup-close {
  position: absolute;
  right: 18px;
  top: 10px;
  font-size: 20px;
  cursor: pointer;
}

button.web_link:hover {
	background-color: #0A1241;
	animation-duration: 2s;
}

a.icons {
	width: 5%;
	margin-right: 2%;
	margin-top: 3%;
}

.lrn {
	margin-top: 20px;
	font-size: 1.8em;
}

.lrn_small {
	font-size: 1.5em;
}

.lrn_very_small {
	font-size: 1.25em;
}

.contents {
	font-family: var(--open-sans);
}

.together2 {
	margin-top: 12px;
	display: flex;
	align-items: center;
}

.together2.small_margin {
	margin-top: 0;
}

.together2 h6 {
	margin-bottom: 0;
}
.glue {
	display: flex;
}

.carousel_item {
	display: flex;
	justify-content: space-around;
}

.slide_show {
	color: grey;
	box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
	padding: 3%;
	margin-bottom: 2%;
}
table th td {
	border:1px solid black;
}
/* ... */

